@@ -4,6 +4,7 @@ version 0.8.1-rc -
  . CocosDenshion: update buffer status after deletion ( issue #486)
  . CocosDenshion: SimpleAudioEngine can stop sounds (issue #498)
  . Parallax: update children at draw (issue #471)
+ . TileMap: TMX maps starts at 0,0 position (part of issue #462)
  
 version 0.8.1-beta - 10-Ago-2009
  . BitmapFontAtlas: .png image can be in subfolders (issue #464)
